--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    height: 100%;
+    min-height: calc(100vh - 10.2rem);
     padding-top: 7rem;
 }
 
